Make dynamodb work

--- a/template.yml
+++ b/template.yml
@@ -12,6 +12,16 @@ Description: >-
 Transform:
 - AWS::Serverless-2016-10-31
 
+# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
+Globals:
+  Function:
+    Timeout: 3
+    Runtime: nodejs12.x
+    Environment:
+      Variables:
+        # Make table name accessible as environment variable from function code during execution
+        AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
+
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
 Resources:
