--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.59",
+        "@types/jest": "^26.0.4",
         "@types/node": "^12.12.50",
         "aws-sam-webpack-plugin": "^0.6.0",
         "jest": "^24.7.1",
+        "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.1",
         "typescript": "^3.9.7",
         "webpack": "^4.43.0",
