--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
-    "name": "delete-test-01",
-    "description": "delete-test-01-description",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "build": "webpack-cli",
-        "clean": "rimraf .aws-sam .vscode",
-        "prebuild": "rimraf .aws-sam .vscode",
-        "prewatch": "rimraf .aws-sam .vscode",
-        "watch": "webpack-cli -w",
-        "test": "jest"
-    },
-    "dependencies": {
-        "aws-sdk": "^2.715.0",
-        "source-map-support": "^0.5.19"
-    },
-    "devDependencies": {
-        "@types/aws-lambda": "^8.10.59",
-        "@types/jest": "^26.0.4",
-        "@types/node": "^12.12.50",
-        "aws-sam-webpack-plugin": "^0.6.0",
-        "jest": "^24.7.1",
-        "ts-jest": "^26.1.3",
-        "ts-loader": "^8.0.1",
-        "typescript": "^3.9.7",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12"
+  "name": "delete-test-01",
+  "description": "delete-test-01-description",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "build": "webpack-cli",
+    "clean": "rimraf .aws-sam .vscode",
+    "prebuild": "rimraf .aws-sam .vscode",
+    "prewatch": "rimraf .aws-sam .vscode",
+    "watch": "webpack-cli -w",
+    "test": "jest",
+    "lint": "tslint ./src/**/*.ts",
+    "lint:fix": "tslint --fix ./src/**/*.ts -t verbose",
+    "prettier": "prettier --write '**/*.{ts,js,json,css,scss,html}'",
+    "format": "npm run prettier && npm run lint:fix"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.715.0",
+    "source-map-support": "^0.5.19"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.59",
+    "@types/jest": "^26.0.4",
+    "@types/node": "^12.12.50",
+    "aws-sam-webpack-plugin": "^0.6.0",
+    "husky": "^4.2.5",
+    "jest": "^24.7.1",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.3",
+    "ts-loader": "^8.0.1",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.7",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  }
 }
