--- a/template.yml
+++ b/template.yml
@@ -22,7 +22,6 @@ Globals:
       # Make table name accessible as environment variable from function code during execution
       Variables:
         AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
-        SAMPLE_TABLE: !Ref SampleTable
 
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
@@ -38,9 +37,9 @@ Resources:
       CodeUri: src/handlers/
       Description: A simple example includes a HTTP get method to get all items from a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
+        # Give Create/Read/Update/Delete Permissions to the Table
         - DynamoDBCrudPolicy:
-            TableName: !Ref SampleTable
+            TableName: !Ref UsersTable
       Events:
         Api:
           Type: Api
@@ -58,9 +57,9 @@ Resources:
       CodeUri: src/handlers/
       Description: A simple example includes a HTTP get method to get one item by id from a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
+        # Give Create/Read/Update/Delete Permissions to the Table
         - DynamoDBCrudPolicy:
-            TableName: !Ref SampleTable
+            TableName: !Ref UsersTable
       Events:
         Api:
           Type: Api
@@ -78,9 +77,9 @@ Resources:
       CodeUri: src/handlers/
       Description: A simple example includes a HTTP post method to add one item to a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
+        # Give Create/Read/Update/Delete Permissions to the Table
         - DynamoDBCrudPolicy:
-            TableName: !Ref SampleTable
+            TableName: !Ref UsersTable
       Events:
         Api:
           Type: Api
@@ -91,7 +90,7 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlesssimpletable
 
   # DynamoDB table to store item: {id: &lt;ID&gt;, name: &lt;NAME&gt;}
-  SampleTable:
+  UsersTable:
     Type: AWS::Serverless::SimpleTable
     Properties:
       PrimaryKey:
