--- a/template.yml
+++ b/template.yml
@@ -30,11 +30,11 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: get-all-items.js
-  getAllItemsFunction:
+  getAllUsersFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: get-all-items.getAllItemsHandler
-      CodeUri: src/handlers/
+      CodeUri: src/handlers/users/
       Description: A simple example includes a HTTP get method to get all items from a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the Table
@@ -50,11 +50,11 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: get-by-id.js
-  getByIdFunction:
+  geUsertByIdFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: get-by-id.getByIdHandler
-      CodeUri: src/handlers/
+      CodeUri: src/handlers/users/
       Description: A simple example includes a HTTP get method to get one item by id from a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the Table
@@ -70,11 +70,11 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: put-item.js
-  putItemFunction:
+  putUserFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: put-item.putItemHandler
-      CodeUri: src/handlers/
+      CodeUri: src/handlers/users/
       Description: A simple example includes a HTTP post method to add one item to a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the Table
